--- a/_posts/2020-09-09-new.md
+++ b/_posts/2020-09-09-new.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "阿賢的教學成果"
 author: mimi
-categories: [ Jekyll, tutorial ]
+categories: [ 消防替代役, tutorial ]
 tags: [red, yellow]
 image: assets/images/11.jpg
 description: "架網站好難"
